# gamestore-curso-django

./: Procfile  Readme.md  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_desenvolvedora_options_alter_genero_options_and_more.py  0003_jogo_plataforma.py  0004_compra.py  0005_itenscompra.py  0006_remove_desenvolvedora_logotipo_remove_jogo_imagem.py
core/views/: __init__.py  compra.py  desenvolvedora.py  genero.py  generoApiView.py  generoClass.py  generoGeneric.py  jogo.py  plataforma.py
gamestore/: settings.py  urls.py
