[tool.poetry]
name = "gamestore"
version = "0.1.0"
description = ""
authors = ["Diana <dianasaramagog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
Django = "^4.0"
Pillow = "^8.4.0"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
